src/log.txt
Game.cpp: In constructor ‘Game::Game()’:
Game.cpp:23:17: error: no matching function for call to ‘Room::Room()’
      Game::Game() 
                 ^
Game.cpp:23:17: note: candidates are:
In file included from Game.h:6:0,
                 from Game.cpp:1:
Room.h:21:2: note: Room::Room(std::string)
  Room(string desc);
  ^
Room.h:21:2: note:   candidate expects 1 argument, 0 provided
Room.h:15:7: note: Room::Room(const Room&)
 class Room
       ^
Room.h:15:7: note:   candidate expects 1 argument, 0 provided
Game.cpp:26:14: error: no match for ‘operator=’ (operand types are ‘Parser’ and ‘Parser*’)
       parser = new Parser();
              ^
Game.cpp:26:14: note: candidate is:
In file included from Game.h:7:0,
                 from Game.cpp:1:
Parser.h:13:7: note: Parser& Parser::operator=(const Parser&)
 class Parser
       ^
Parser.h:13:7: note:   no known conversion for argument 1 from ‘Parser*’ to ‘const Parser&’
Game.cpp: In member function ‘void Game::createRooms()’:
Game.cpp:34:12: error: no matching function for call to ‘Room::Room()’
       Room outside, theater, pub, lab, office;
            ^
Game.cpp:34:12: note: candidates are:
In file included from Game.h:6:0,
                 from Game.cpp:1:
Room.h:21:2: note: Room::Room(std::string)
  Room(string desc);
  ^
Room.h:21:2: note:   candidate expects 1 argument, 0 provided
Room.h:15:7: note: Room::Room(const Room&)
 class Room
       ^
Room.h:15:7: note:   candidate expects 1 argument, 0 provided
Game.cpp:34:21: error: no matching function for call to ‘Room::Room()’
       Room outside, theater, pub, lab, office;
                     ^
Game.cpp:34:21: note: candidates are:
In file included from Game.h:6:0,
                 from Game.cpp:1:
Room.h:21:2: note: Room::Room(std::string)
  Room(string desc);
  ^
Room.h:21:2: note:   candidate expects 1 argument, 0 provided
Room.h:15:7: note: Room::Room(const Room&)
 class Room
       ^
Room.h:15:7: note:   candidate expects 1 argument, 0 provided
Game.cpp:34:30: error: no matching function for call to ‘Room::Room()’
       Room outside, theater, pub, lab, office;
                              ^
Game.cpp:34:30: note: candidates are:
In file included from Game.h:6:0,
                 from Game.cpp:1:
Room.h:21:2: note: Room::Room(std::string)
  Room(string desc);
  ^
Room.h:21:2: note:   candidate expects 1 argument, 0 provided
Room.h:15:7: note: Room::Room(const Room&)
 class Room
       ^
Room.h:15:7: note:   candidate expects 1 argument, 0 provided
Game.cpp:34:35: error: no matching function for call to ‘Room::Room()’
       Room outside, theater, pub, lab, office;
                                   ^
Game.cpp:34:35: note: candidates are:
In file included from Game.h:6:0,
                 from Game.cpp:1:
Room.h:21:2: note: Room::Room(std::string)
  Room(string desc);
  ^
Room.h:21:2: note:   candidate expects 1 argument, 0 provided
Room.h:15:7: note: Room::Room(const Room&)
 class Room
       ^
Room.h:15:7: note:   candidate expects 1 argument, 0 provided
Game.cpp:34:40: error: no matching function for call to ‘Room::Room()’
       Room outside, theater, pub, lab, office;
                                        ^
Game.cpp:34:40: note: candidates are:
In file included from Game.h:6:0,
                 from Game.cpp:1:
Room.h:21:2: note: Room::Room(std::string)
  Room(string desc);
  ^
Room.h:21:2: note:   candidate expects 1 argument, 0 provided
Room.h:15:7: note: Room::Room(const Room&)
 class Room
       ^
Room.h:15:7: note:   candidate expects 1 argument, 0 provided
Game.cpp:37:15: error: no match for ‘operator=’ (operand types are ‘Room’ and ‘Room*’)
       outside = new Room("outside the main entrance of the university");
               ^
Game.cpp:37:15: note: candidate is:
In file included from Game.h:6:0,
                 from Game.cpp:1:
Room.h:15:7: note: Room& Room::operator=(const Room&)
 class Room
       ^
Room.h:15:7: note:   no known conversion for argument 1 from ‘Room*’ to ‘const Room&’
Game.cpp:38:15: error: no match for ‘operator=’ (operand types are ‘Room’ and ‘Room*’)
       theater = new Room("in a lecture theater");
               ^
Game.cpp:38:15: note: candidate is:
In file included from Game.h:6:0,
                 from Game.cpp:1:
Room.h:15:7: note: Room& Room::operator=(const Room&)
 class Room
       ^
Room.h:15:7: note:   no known conversion for argument 1 from ‘Room*’ to ‘const Room&’
Game.cpp:39:11: error: no match for ‘operator=’ (operand types are ‘Room’ and ‘Room*’)
       pub = new Room("in the campus pub");
           ^
Game.cpp:39:11: note: candidate is:
In file included from Game.h:6:0,
                 from Game.cpp:1:
Room.h:15:7: note: Room& Room::operator=(const Room&)
 class Room
       ^
Room.h:15:7: note:   no known conversion for argument 1 from ‘Room*’ to ‘const Room&’
Game.cpp:40:11: error: no match for ‘operator=’ (operand types are ‘Room’ and ‘Room*’)
       lab = new Room("in a computing lab");
           ^
Game.cpp:40:11: note: candidate is:
In file included from Game.h:6:0,
                 from Game.cpp:1:
Room.h:15:7: note: Room& Room::operator=(const Room&)
 class Room
       ^
Room.h:15:7: note:   no known conversion for argument 1 from ‘Room*’ to ‘const Room&’
Game.cpp:41:14: error: no match for ‘operator=’ (operand types are ‘Room’ and ‘Room*’)
       office = new Room("in the computing admin office");
              ^
Game.cpp:41:14: note: candidate is:
In file included from Game.h:6:0,
                 from Game.cpp:1:
Room.h:15:7: note: Room& Room::operator=(const Room&)
 class Room
       ^
Room.h:15:7: note:   no known conversion for argument 1 from ‘Room*’ to ‘const Room&’
Game.cpp: In member function ‘bool Game::processCommand(Command)’:
Game.cpp:105:7: error: ‘String’ was not declared in this scope
       String commandWord = command.getCommandWord();
       ^
Game.cpp:106:11: error: ‘commandWord’ was not declared in this scope
       if (commandWord == "help") {
           ^
Game.cpp: In member function ‘void Game::goRoom(Command)’:
Game.cpp:146:7: error: ‘String’ was not declared in this scope
       String direction = command.getSecondWord();
       ^
Game.cpp:149:43: error: ‘direction’ was not declared in this scope
       Room nextRoom = currentRoom.getExit(direction);
                                           ^
Game.cpp:151:23: error: ‘null’ was not declared in this scope
       if (nextRoom == null) {
                       ^
